<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.rose.zoo.activities.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="0.06"
        android:text="@string/login_register"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textColor="@android:color/black"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#e6e6e6"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_weight="0.01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="#e6e6e6"
        android:backgroundTintMode="src_over"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_weight="0.01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/login_button"

        />

    <TextView
        android:id="@+id/hint_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_reg"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:text="@string/register_button"
        android:background="#e6e6e6"
        android:textColor="@android:color/holo_blue_dark"

        />

</LinearLayout>