<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.rose.zoo.activities.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/register_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="0.06"
        android:text="@string/register_form"
        android:gravity="center"/>

    <TextView
        android:id="@+id/enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Username"
        android:textColor="@android:color/black"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/reg_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_weight="0.01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#e6e6e6"
        />

    <TextView
        android:id="@+id/enter_userpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Password"
        android:textColor="@android:color/black"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_weight="0.01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#e6e6e6"
        />

    <TextView
        android:id="@+id/confirm_userpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:textColor="@android:color/black"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/reg_pass_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_weight="0.01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#e6e6e6"

        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/register_button"
        android:background="#e6e6e6"
        android:textColor="@android:color/holo_blue_dark"

        />

</LinearLayout>